Dyanamic Routing Done

--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -134,10 +134,10 @@
               ></span>
               <ul class="customer-links list-inline">
                 <li>
-                  <a href="#"><div class="name"><%= user.username %></div></a>
+                  <a href="#"><div class="name"><%= username %></div></a>
                 </li>
                 <li>
-                  <a href="#"><div class="about"><%= user.name %></div></a>
+                  <a href="#"><div class="about"><%= fullname %></div></a>
                 </li>
                 <li>
                   <a href="/adminProfile"
