--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -103,7 +103,7 @@
               ></span>
               <ul class="customer-links list-inline">
                 <!-- <li><a href="/">Login</a></li> -->
-                <li><a href="/reg">Create Account</a></li>
+                <li><a href="/adminRegister">Create Admin's Account</a></li>
                 <!-- <li><a href="/logout">LogOut</a></li> -->
               </ul>
             </div>
@@ -149,6 +149,7 @@
                         <input
                           type="text"
                           name="ID"
+                          autofocus
                           placeholder=""
                           required />
                       </div>
@@ -161,8 +162,7 @@
                           name="username"
                           placeholder=""
                           id="CustomerEmail"
-                          required
-                          autofocus />
+                          required />
                       </div>
                     </div>
 
