--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,10 +134,10 @@
               ></span>
               <ul class="customer-links list-inline">
                 <li>
-                  <a href="#"><div class="name">Prince</div></a>
+                  <a href="#"><div class="name"><%= username %></div></a>
                 </li>
                 <li>
-                  <a href="#"><div class="about">Prince Bhatt</div></a>
+                  <a href="#"><div class="about"><%= name %></div></a>
                 </li>
                 <li><a href="/userLogout">Logout</a></li>
               </ul>
