Error Handling Done, Testing Done

--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Admin Home - Prince of Deals</title>
+    <title>QuickPick - Admin's Home</title>
     <meta
       name="description"
       content="description" />
