--- a/views/adminProfile.ejs
+++ b/views/adminProfile.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Admins Profile - Prince of Deals</title>
+    <title>QuickPick - Admin's Profile</title>
     <meta
       name="description"
       content="description" />
