--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Home - Prince of Deals</title>
+    <title>QuickPick - Home</title>
     <meta
       name="description"
       content="description" />
