--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Login - Prince of Deals</title>
+    <title>QuickPick - Login</title>
     <meta
       name="description"
       content="description" />
