--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>SignUp - Prince of Deals</title>
+    <title>QuickPick - Register</title>
     <meta
       name="description"
       content="description" />
