--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Admins Login - Prince of Deals</title>
+    <title>QuickPick - Admin's Login</title>
     <meta
       name="description"
       content="description" />
