--- a/views/adminRegister.ejs
+++ b/views/adminRegister.ejs
@@ -9,7 +9,7 @@
     <meta
       http-equiv="x-ua-compatible"
       content="ie=edge" />
-    <title>Admins SignUp - Prince of Deals</title>
+    <title>QuickPick - Admin's Register</title>
     <meta
       name="description"
       content="description" />
