--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
   class="no-js"
   lang="en">
   <head>
-    <title>QuickPick - 404</title>
+    <title>QuickPick - About Page</title>
     <meta
       name="description"
       content="description" />
@@ -54,6 +54,86 @@
           </button>
         </div>
       </div>
+      <div class="top-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+              <div class="currency-picker">
+                <span class="selected-currency">USD</span>
+                <ul id="currencies">
+                  <li
+                    data-currency="INR"
+                    class="">
+                    INR
+                  </li>
+                  <li
+                    data-currency="GBP"
+                    class="">
+                    GBP
+                  </li>
+                  <li
+                    data-currency="CAD"
+                    class="">
+                    CAD
+                  </li>
+                  <li
+                    data-currency="USD"
+                    class="selected">
+                    USD
+                  </li>
+                  <li
+                    data-currency="AUD"
+                    class="">
+                    AUD
+                  </li>
+                  <li
+                    data-currency="EUR"
+                    class="">
+                    EUR
+                  </li>
+                  <li
+                    data-currency="JPY"
+                    class="">
+                    JPY
+                  </li>
+                </ul>
+              </div>
+              <div class="language-dropdown">
+                <span class="language-dd">English</span>
+                <ul id="language">
+                  <li class="">German</li>
+                  <li class="">French</li>
+                </ul>
+              </div>
+              <p class="phone-no">
+                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
+              </p>
+            </div>
+            <div
+              class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+              <div class="text-center">
+                <p class="top-header_middle-text">Worldwide Express Shipping</p>
+              </div>
+            </div>
+            <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
+              <ul class="customer-links list-inline">
+                <li>
+                  <a href="#"><div class="name"><%= username %></div></a>
+                </li>
+                <li>
+                  <a href="#"><div class="about"><%= name %></div></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="header-wrap animated d-flex">
         <div class="container-fluid">
           <div class="row align-items-center">
@@ -65,7 +145,6 @@
                   title="Belle Multipurpose Html Template" />
               </a>
             </div>
-            <!--End Desktop Logo-->
             <div class="col-2 col-sm-3 col-md-3 col-lg-8">
               <div class="d-block d-lg-none">
                 <button
@@ -75,12 +154,10 @@
                   <i class="anm anm-bars-r"></i>
                 </button>
               </div>
-              <!--Desktop Menu-->
               <nav
                 class="grid__item"
                 id="AccessibleNav"
                 role="navigation">
-                <!-- for mobile -->
                 <ul
                   id="siteNav"
                   class="site-nav medium center hidearrow">
@@ -1722,35 +1799,309 @@
         </ul>
       </div>
       <div id="page-content">
+        <div class="page section-header text-center">
+          <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">About Us</h1></div>
+          </div>
+        </div>
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="empty-page-content text-center">
-                <h1 style="font-size: 2rem; font-weight: 700">
-                  404 Page Not Found
-                </h1>
-                <p style="font-size: 15px; font-weight: 600">
-                  The page you requested does not exist or may be
-                  underdevelopment
-                </p>
-                <h1 style="font-size: 8px"><%= message %></h1>
-                <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
+              <div class="text-center mb-4">
+                <div class="rte-setting">
+                  <p>
+                    <strong
+                      >Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry.</strong
+                    >
+                  </p>
+                  <p>
+                    The standard chunk of Lorem Ipsum used since the 1500s is
+                    reproduced below for those interested. Sections 1.10.32 and
+                    1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are
+                    also reproduced in their exact original form, accompanied by
+                    English versions from the 1914 translation by H. Rackham.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 mb-4">
+              <img
+                class="blur-up lazyload"
+                data-src="/images/about1.jpg"
+                src="/images/about1.jpg"
+                alt="About Us" />
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 mb-4">
+              <img
+                class="blur-up lazyload"
+                data-src="/images/about2.jpg"
+                src="/images/about2.jpg"
+                alt="About Us" />
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 mb-4">
+              <img
+                class="blur-up lazyload"
+                data-src="/images/about3.jpg"
+                src="/images/about3.jpg"
+                alt="About Us" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h2>Sed ut perspiciatis unde omnis iste natus error</h2>
+              <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium, On the other hand, we
+                denounce with righteous indignation and dislike men who are so
+                beguiled and demoralized by the charms of pleasure of the
+                moment, so blinded by desire, that they cannot foresee the pain.
+              </p>
+              <p>
+                simple and easy to distinguish. In a free hour, when our power
+                of choice is untrammelled and when nothing prevents our being
+                able to do what we like best, every pleasure is to be welcomed
+                and every pain avoided. But in certain circumstances and owing
+                to the claims of duty or the obligations of business it will
+                frequently occur that pleasures have to be repudiated and
+                annoyances accepted.
+              </p>
+              <p></p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 mb-4">
+              <h2 class="h2">About Annimex Web</h2>
+              <div class="rte-setting">
                 <p>
-                  <a
-                    href="index"
-                    class="btn btn--has-icon-after"
-                    >Continue shopping
-                    <i
-                      class="fa fa-caret-right"
-                      aria-hidden="true"></i
-                  ></a>
+                  <strong
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</strong
+                  >
+                </p>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium, totam rem aperiam, eaque
+                  ipsa quae ab illo inventore veritatis et quasi architecto
+                  beatae vitae dicta sunt explicabo.
+                </p>
+                <p></p>
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                  blanditiis praesentium voluptatum deleniti atque corrupti quos
+                  dolores et quas molestias excepturi sint occaecati cupiditate
+                  non provident, similique sunt in culpa qui officia deserunt
+                  mollitia animi, id est laborum et dolorum fuga.
                 </p>
               </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+              <h2 class="h2">Contact Us</h2>
+              <ul class="addressFooter">
+                <li>
+                  <i class="icon anm anm-map-marker-al"></i>
+                  <p>55 Gallaxy Enque, 2568 steet, 23568 NY</p>
+                </li>
+                <li class="phone">
+                  <i class="icon anm anm-phone-s"></i>
+                  <p>(440) 000 000 0000</p>
+                </li>
+                <li class="email">
+                  <i class="icon anm anm-envelope-l"></i>
+                  <p>sales@yousite.com</p>
+                </li>
+              </ul>
+              <hr />
+              <ul class="list--inline site-footer__social-icons social-icons">
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    title=""
+                    ><i class="icon icon-facebook"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-twitter"></i>
+                    <span class="icon__fallback-text">Twitter</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-pinterest"></i>
+                    <span class="icon__fallback-text">Pinterest</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-instagram"></i>
+                    <span class="icon__fallback-text">Instagram</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-tumblr-alt"></i>
+                    <span class="icon__fallback-text">Tumblr</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-youtube"></i>
+                    <span class="icon__fallback-text">YouTube</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-vimeo-alt"></i>
+                    <span class="icon__fallback-text">Video</span></a
+                  >
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
       <footer id="footer">
+        <div class="newsletter-section">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 w-100 d-flex justify-content-start align-items-center">
+                <div class="display-table">
+                  <div class="display-table-cell footer-newsletter">
+                    <div class="section-header text-center">
+                      <label class="h2"
+                        ><span>sign up for </span>newsletter</label
+                      >
+                    </div>
+                    <form
+                      action="#"
+                      method="post">
+                      <div class="input-group">
+                        <input
+                          type="email"
+                          class="input-group__field newsletter__input"
+                          name="EMAIL"
+                          value=""
+                          placeholder="Email address"
+                          required />
+                        <span class="input-group__btn">
+                          <button
+                            type="submit"
+                            class="btn newsletter__submit"
+                            name="commit"
+                            id="Subscribe">
+                            <span
+                              onclick="location.href='/contact'"
+                              class="newsletter__submit-text--large"
+                              >Subscribe</span
+                            >
+                          </button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-5 d-flex justify-content-end align-items-center">
+                <div class="footer-social">
+                  <ul
+                    class="list--inline site-footer__social-icons social-icons">
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-pinterest"></i>
+                        <span class="icon__fallback-text">Pinterest</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-instagram"></i>
+                        <span class="icon__fallback-text">Instagram</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-tumblr-alt"></i>
+                        <span class="icon__fallback-text">Tumblr</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-vimeo-alt"></i>
+                        <span class="icon__fallback-text">Video</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="site-footer">
           <div class="container">
             <div class="footer-top">
