--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,13 @@
   class="no-js"
   lang="en">
   <head>
-    <title>QuickPick - 404</title>
+    <meta
+      http-equiv="Content-Type"
+      content="text/html; charset=utf-8" />
+    <meta
+      http-equiv="x-ua-compatible"
+      content="ie=edge" />
+    <title>QuickPick - Contact</title>
     <meta
       name="description"
       content="description" />
@@ -52,6 +58,86 @@
             class="search-trigger close-btn">
             <i class="icon anm anm-times-l"></i>
           </button>
+        </div>
+      </div>
+      <div class="top-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+              <div class="currency-picker">
+                <span class="selected-currency">USD</span>
+                <ul id="currencies">
+                  <li
+                    data-currency="INR"
+                    class="">
+                    INR
+                  </li>
+                  <li
+                    data-currency="GBP"
+                    class="">
+                    GBP
+                  </li>
+                  <li
+                    data-currency="CAD"
+                    class="">
+                    CAD
+                  </li>
+                  <li
+                    data-currency="USD"
+                    class="selected">
+                    USD
+                  </li>
+                  <li
+                    data-currency="AUD"
+                    class="">
+                    AUD
+                  </li>
+                  <li
+                    data-currency="EUR"
+                    class="">
+                    EUR
+                  </li>
+                  <li
+                    data-currency="JPY"
+                    class="">
+                    JPY
+                  </li>
+                </ul>
+              </div>
+              <div class="language-dropdown">
+                <span class="language-dd">English</span>
+                <ul id="language">
+                  <li class="">German</li>
+                  <li class="">French</li>
+                </ul>
+              </div>
+              <p class="phone-no">
+                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
+              </p>
+            </div>
+            <div
+              class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+              <div class="text-center">
+                <p class="top-header_middle-text">Worldwide Express Shipping</p>
+              </div>
+            </div>
+            <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
+              <ul class="customer-links list-inline">
+                <li>
+                  <a href="#"><div class="name"><%= username %></div></a>
+                </li>
+                <li>
+                  <a href="#"><div class="about"><%= name %></div></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="header-wrap animated d-flex">
@@ -1722,35 +1808,320 @@
         </ul>
       </div>
       <div id="page-content">
+        <div class="page section-header text-center">
+          <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">Contact Us</h1></div>
+          </div>
+        </div>
+        <div class="map-section map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29266.72813746031!2d77.79450301700082!3d23.520234045472424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c04502a3166f5%3A0x7da6896331548213!2sVidisha%2C%20Madhya%20Pradesh%20464001!5e0!3m2!1sen!2sin!4v1721642321165!5m2!1sen!2sin"
+            height="350"
+            style="border: 0"
+            allowfullscreen
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="bredcrumbWrap">
+          <div class="container breadcrumbs">
+            <a
+              href="#"
+              title="Back to the home page"
+              >Home</a
+            ><span aria-hidden="true">›</span><span>Contact Us</span>
+          </div>
+        </div>
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="empty-page-content text-center">
-                <h1 style="font-size: 2rem; font-weight: 700">
-                  404 Page Not Found
-                </h1>
-                <p style="font-size: 15px; font-weight: 600">
-                  The page you requested does not exist or may be
-                  underdevelopment
-                </p>
-                <h1 style="font-size: 8px"><%= message %></h1>
-                <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
-                <p>
-                  <a
-                    href="index"
-                    class="btn btn--has-icon-after"
-                    >Continue shopping
-                    <i
-                      class="fa fa-caret-right"
-                      aria-hidden="true"></i
-                  ></a>
-                </p>
+            <div class="col-12 col-sm-12 col-md-8 col-lg-8 mb-4">
+              <h2>Drop Us A Line</h2>
+              <p>
+                Lorem Ipsum é um texto modelo da indústria tipográfica e de
+                impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado
+                por estas indústrias desde o ano de 1500
+              </p>
+              <div class="formFeilds contact-form form-vertical">
+                <form
+                  action="#"
+                  method="post"
+                  id="contact_form"
+                  class="contact-form">
+                  <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                      <div class="form-group">
+                        <input
+                          type="text"
+                          id="ContactFormName"
+                          name="name"
+                          placeholder="Name"
+                          value=""
+                          required="" />
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                      <div class="form-group">
+                        <input
+                          type="email"
+                          id="ContactFormEmail"
+                          name="email"
+                          placeholder="Email"
+                          value=""
+                          required="" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                      <div class="form-group">
+                        <input
+                          required=""
+                          type="tel"
+                          id="ContactFormPhone"
+                          name="phone"
+                          pattern="[0-9\-]*"
+                          placeholder="Phone Number"
+                          value="" />
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                      <div class="form-group">
+                        <input
+                          required=""
+                          type="text"
+                          id="ContactSubject"
+                          name="subject"
+                          placeholder="Subject"
+                          value="" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                      <div class="form-group">
+                        <textarea
+                          required=""
+                          rows="10"
+                          id="ContactFormMessage"
+                          name="message"
+                          placeholder="Your Message"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                      <input
+                        type="submit"
+                        class="btn"
+                        value="Send Message" />
+                    </div>
+                  </div>
+                </form>
               </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+              <div class="open-hours">
+                <strong>Opening Hours</strong><br />
+                Mon - Sat : 9am - 11pm<br />
+                Sunday: 11am - 5pm
+              </div>
+              <hr />
+              <ul class="addressFooter">
+                <li>
+                  <i class="icon anm anm-map-marker-al"></i>
+                  <p>55 Gallaxy Enque, 2568 steet, 23568 NY</p>
+                </li>
+                <li class="phone">
+                  <i class="icon anm anm-phone-s"></i>
+                  <p>(440) 000 000 0000</p>
+                </li>
+                <li class="email">
+                  <i class="icon anm anm-envelope-l"></i>
+                  <p>sales@yousite.com</p>
+                </li>
+              </ul>
+              <hr />
+              <ul class="list--inline site-footer__social-icons social-icons">
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-facebook"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-twitter"></i>
+                    <span class="icon__fallback-text">Twitter</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-pinterest"></i>
+                    <span class="icon__fallback-text">Pinterest</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-instagram"></i>
+                    <span class="icon__fallback-text">Instagram</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-tumblr-alt"></i>
+                    <span class="icon__fallback-text">Tumblr</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-youtube"></i>
+                    <span class="icon__fallback-text">YouTube</span></a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="social-icons__link"
+                    href="#"
+                    target="_blank"
+                    ><i class="icon icon-vimeo-alt"></i>
+                    <span class="icon__fallback-text">Video</span></a
+                  >
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
       <footer id="footer">
+        <div class="newsletter-section">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 w-100 d-flex justify-content-start align-items-center">
+                <div class="display-table">
+                  <div class="display-table-cell footer-newsletter">
+                    <div class="section-header text-center">
+                      <label class="h2"
+                        ><span>sign up for </span>newsletter</label
+                      >
+                    </div>
+                    <form
+                      action="#"
+                      method="post">
+                      <div class="input-group">
+                        <input
+                          type="email"
+                          class="input-group__field newsletter__input"
+                          name="EMAIL"
+                          value=""
+                          placeholder="Email address"
+                          required />
+                        <span class="input-group__btn">
+                          <button
+                            type="submit"
+                            class="btn newsletter__submit"
+                            name="commit"
+                            id="Subscribe">
+                            <span
+                              onclick="location.href='/contact'"
+                              class="newsletter__submit-text--large"
+                              >Subscribe</span
+                            >
+                          </button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-5 d-flex justify-content-end align-items-center">
+                <div class="footer-social">
+                  <ul
+                    class="list--inline site-footer__social-icons social-icons">
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-pinterest"></i>
+                        <span class="icon__fallback-text">Pinterest</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-instagram"></i>
+                        <span class="icon__fallback-text">Instagram</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-tumblr-alt"></i>
+                        <span class="icon__fallback-text">Tumblr</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-vimeo-alt"></i>
+                        <span class="icon__fallback-text">Video</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="site-footer">
           <div class="container">
             <div class="footer-top">
