--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -3,7 +3,13 @@
   class="no-js"
   lang="en">
   <head>
-    <title>QuickPick - 404</title>
+    <meta
+      http-equiv="Content-Type"
+      content="text/html; charset=utf-8" />
+    <meta
+      http-equiv="x-ua-compatible"
+      content="ie=edge" />
+    <title>QuickPick - FAQ</title>
     <meta
       name="description"
       content="description" />
@@ -52,6 +58,86 @@
             class="search-trigger close-btn">
             <i class="icon anm anm-times-l"></i>
           </button>
+        </div>
+      </div>
+      <div class="top-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+              <div class="currency-picker">
+                <span class="selected-currency">USD</span>
+                <ul id="currencies">
+                  <li
+                    data-currency="INR"
+                    class="">
+                    INR
+                  </li>
+                  <li
+                    data-currency="GBP"
+                    class="">
+                    GBP
+                  </li>
+                  <li
+                    data-currency="CAD"
+                    class="">
+                    CAD
+                  </li>
+                  <li
+                    data-currency="USD"
+                    class="selected">
+                    USD
+                  </li>
+                  <li
+                    data-currency="AUD"
+                    class="">
+                    AUD
+                  </li>
+                  <li
+                    data-currency="EUR"
+                    class="">
+                    EUR
+                  </li>
+                  <li
+                    data-currency="JPY"
+                    class="">
+                    JPY
+                  </li>
+                </ul>
+              </div>
+              <div class="language-dropdown">
+                <span class="language-dd">English</span>
+                <ul id="language">
+                  <li class="">German</li>
+                  <li class="">French</li>
+                </ul>
+              </div>
+              <p class="phone-no">
+                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
+              </p>
+            </div>
+            <div
+              class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+              <div class="text-center">
+                <p class="top-header_middle-text">Worldwide Express Shipping</p>
+              </div>
+            </div>
+            <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
+              <ul class="customer-links list-inline">
+                <li>
+                  <a href="#"><div class="name"><%= username %></div></a>
+                </li>
+                <li>
+                  <a href="#"><div class="about"><%= name %></div></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="header-wrap animated d-flex">
@@ -1722,35 +1808,269 @@
         </ul>
       </div>
       <div id="page-content">
+        <div class="page section-header text-center">
+          <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">FAQs</h1></div>
+          </div>
+        </div>
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="empty-page-content text-center">
-                <h1 style="font-size: 2rem; font-weight: 700">
-                  404 Page Not Found
-                </h1>
-                <p style="font-size: 15px; font-weight: 600">
-                  The page you requested does not exist or may be
-                  underdevelopment
-                </p>
-                <h1 style="font-size: 8px"><%= message %></h1>
-                <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
-                <p>
-                  <a
-                    href="index"
-                    class="btn btn--has-icon-after"
-                    >Continue shopping
-                    <i
-                      class="fa fa-caret-right"
-                      aria-hidden="true"></i
-                  ></a>
-                </p>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
+              <div id="accordionExample">
+                <h2 class="title h2">Pyment and Returns</h2>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseOne"
+                    aria-expanded="false"
+                    aria-controls="collapseOne">
+                    What is Lorem Ipsum?
+                  </h4>
+                  <div
+                    id="collapseOne"
+                    class="collapse panel-content"
+                    data-parent="#accordionExample">
+                    Nullam sed neque luctus, maximus diam sed, facilisis orci.
+                    Nunc ultricies neque a aliquam sollicitudin. Vivamus sit
+                    amet finibus sapien. Duis est dui, sodales nec pretium a,
+                    interdum in lacus. Sed et est vel velit vestibulum tincidunt
+                    non a felis. Phasellus convallis, diam eu facilisis
+                    tincidunt, ex nibh vulputate dolor, eu maximus massa libero
+                    vel eros. In vulputate metus lacus, eu vehicula dolor
+                    feugiat id. Nulla vitae nisl in ex consequat porttitor vel a
+                    lectus. Vestibulum viverra in velit ac consequat. Nullam
+                    porta nulla eu dignissim cursus.
+                  </div>
+                </div>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo">
+                    Why do we use it?
+                  </h4>
+                  <div
+                    id="collapseTwo"
+                    class="collapse panel-content">
+                    Cras non gravida urna. Ut venenatis nulla in tellus
+                    lobortis, vel mollis lectus condimentum. Duis elementum
+                    sapien purus, et sagittis nulla efficitur in. Phasellus
+                    vitae eros sed nisi fringilla auctor nec quis nunc.
+                    Pellentesque habitant morbi tristique senectus et netus et
+                    malesuada fames ac turpis egestas. Pellentesque rutrum
+                    faucibus nibh vitae fermentum. Aliquam commodo sem sit amet
+                    malesuada consectetur. Ut sit amet vestibulum diam. Etiam
+                    quis dictum turpis, eget condimentum velit. Sed cursus odio
+                    dapibus, consectetur massa sit amet, fringilla purus.
+                  </div>
+                </div>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree">
+                    How to use this template?
+                  </h4>
+                  <div
+                    class="panel-content collapse"
+                    id="collapseThree">
+                    Duis nec nisi id ligula dapibus maximus nec eu dui. Proin
+                    ornare, ipsum vitae tincidunt rutrum, diam neque accumsan
+                    turpis, a dignissim nisi libero non lacus. Nulla quis massa
+                    nulla. Morbi metus lacus, sagittis sed est vel, aliquet
+                    ultrices nibh. Morbi auctor ex eget egestas auctor.
+                  </div>
+                </div>
+                <h2 class="title h2">Other Resources</h2>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseFour"
+                    aria-expanded="false"
+                    aria-controls="collapseFour">
+                    Integer et erat quis ante tristique lobortis at vel lorem.
+                  </h4>
+                  <div
+                    class="panel-content collapse"
+                    id="collapseFour">
+                    Proin varius magna rhoncus quam egestas, id faucibus eros
+                    viverra. Suspendisse id ipsum at leo congue feugiat non
+                    faucibus enim. Suspendisse non hendrerit lorem. Phasellus
+                    sit amet nisi dui. Aliquam erat volutpat. Integer facilisis
+                    lacus est, a semper felis iaculis vel. Pellentesque ultrices
+                    lorem sed arcu ornare iaculis. Ut pellentesque a dolor ac
+                    iaculis. Nullam ac rutrum urna. Ut tempor tempus tincidunt.
+                    Sed facilisis ante sed tellus malesuada fermentum.
+                  </div>
+                </div>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseFive"
+                    aria-expanded="false"
+                    aria-controls="collapseFive">
+                    Where does it come from?
+                  </h4>
+                  <div
+                    class="panel-content collapse"
+                    id="collapseFive">
+                    Aliquam erat volutpat. Interdum et malesuada fames ac ante
+                    ipsum primis in faucibus. Proin tortor enim, lacinia nec
+                    malesuada eget, laoreet eget quam. Suspendisse quis mauris
+                    quis tellus rutrum imperdiet nec id ipsum. Suspendisse non
+                    nisi in metus viverra convallis. Nam dictum erat sed libero
+                    eleifend, a venenatis ipsum elementum. Nulla placerat metus
+                    nec nisl malesuada, et mattis mauris faucibus. Cras blandit
+                    efficitur condimentum. Nam euismod sapien et iaculis tempus.
+                    Duis vitae ullamcorper libero.
+                  </div>
+                </div>
+                <div class="faq-body">
+                  <h4
+                    class="panel-title"
+                    data-toggle="collapse"
+                    data-target="#collapseSix"
+                    aria-expanded="false"
+                    aria-controls="collapseSix">
+                    Why do we use it?
+                  </h4>
+                  <div
+                    class="panel-content collapse"
+                    id="collapseSix">
+                    It is a long established fact that a reader will be
+                    distracted by the readable content of a page when looking at
+                    its layout.It is a long established fact that a reader will
+                    be distracted by the readable content of a page when looking
+                    at its layout.
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
       <footer id="footer">
+        <div class="newsletter-section">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 w-100 d-flex justify-content-start align-items-center">
+                <div class="display-table">
+                  <div class="display-table-cell footer-newsletter">
+                    <div class="section-header text-center">
+                      <label class="h2"
+                        ><span>sign up for </span>newsletter</label
+                      >
+                    </div>
+                    <form
+                      action="#"
+                      method="post">
+                      <div class="input-group">
+                        <input
+                          type="email"
+                          class="input-group__field newsletter__input"
+                          name="EMAIL"
+                          value=""
+                          placeholder="Email address"
+                          required />
+                        <span class="input-group__btn">
+                          <button
+                            type="submit"
+                            class="btn newsletter__submit"
+                            name="commit"
+                            id="Subscribe">
+                            <span
+                              onclick="location.href='/contact'"
+                              class="newsletter__submit-text--large"
+                              >Subscribe</span
+                            >
+                          </button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-5 d-flex justify-content-end align-items-center">
+                <div class="footer-social">
+                  <ul
+                    class="list--inline site-footer__social-icons social-icons">
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-pinterest"></i>
+                        <span class="icon__fallback-text">Pinterest</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-instagram"></i>
+                        <span class="icon__fallback-text">Instagram</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-tumblr-alt"></i>
+                        <span class="icon__fallback-text">Tumblr</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-vimeo-alt"></i>
+                        <span class="icon__fallback-text">Video</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="site-footer">
           <div class="container">
             <div class="footer-top">
