--- a/views/gift.ejs
+++ b/views/gift.ejs
@@ -3,7 +3,13 @@
   class="no-js"
   lang="en">
   <head>
-    <title>QuickPick - 404</title>
+    <meta
+      http-equiv="Content-Type"
+      content="text/html; charset=utf-8" />
+    <meta
+      http-equiv="x-ua-compatible"
+      content="ie=edge" />
+    <title>QuickPick</title>
     <meta
       name="description"
       content="description" />
@@ -27,6 +33,11 @@
       href="/css/responsive.css" />
   </head>
   <body class="page-template belle">
+    <div id="pre-loader">
+      <img
+        src="/images/loader.gif"
+        alt="Loading..." />
+    </div>
     <div class="pageWrapper">
       <div class="search">
         <div class="search__form">
@@ -52,6 +63,86 @@
             class="search-trigger close-btn">
             <i class="icon anm anm-times-l"></i>
           </button>
+        </div>
+      </div>
+      <div class="top-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+              <div class="currency-picker">
+                <span class="selected-currency">USD</span>
+                <ul id="currencies">
+                  <li
+                    data-currency="INR"
+                    class="">
+                    INR
+                  </li>
+                  <li
+                    data-currency="GBP"
+                    class="">
+                    GBP
+                  </li>
+                  <li
+                    data-currency="CAD"
+                    class="">
+                    CAD
+                  </li>
+                  <li
+                    data-currency="USD"
+                    class="selected">
+                    USD
+                  </li>
+                  <li
+                    data-currency="AUD"
+                    class="">
+                    AUD
+                  </li>
+                  <li
+                    data-currency="EUR"
+                    class="">
+                    EUR
+                  </li>
+                  <li
+                    data-currency="JPY"
+                    class="">
+                    JPY
+                  </li>
+                </ul>
+              </div>
+              <div class="language-dropdown">
+                <span class="language-dd">English</span>
+                <ul id="language">
+                  <li class="">German</li>
+                  <li class="">French</li>
+                </ul>
+              </div>
+              <p class="phone-no">
+                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
+              </p>
+            </div>
+            <div
+              class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+              <div class="text-center">
+                <p class="top-header_middle-text">Worldwide Express Shipping</p>
+              </div>
+            </div>
+            <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
+              <ul class="customer-links list-inline">
+                <li>
+                  <a href="#"><div class="name"><%= username %></div></a>
+                </li>
+                <li>
+                  <a href="#"><div class="about"><%= name %></div></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="header-wrap animated d-flex">
@@ -1722,35 +1813,232 @@
         </ul>
       </div>
       <div id="page-content">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="empty-page-content text-center">
-                <h1 style="font-size: 2rem; font-weight: 700">
-                  404 Page Not Found
-                </h1>
-                <p style="font-size: 15px; font-weight: 600">
-                  The page you requested does not exist or may be
-                  underdevelopment
-                </p>
-                <h1 style="font-size: 8px"><%= message %></h1>
-                <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
-                <p>
-                  <a
-                    href="index"
-                    class="btn btn--has-icon-after"
-                    >Continue shopping
-                    <i
-                      class="fa fa-caret-right"
-                      aria-hidden="true"></i
-                  ></a>
-                </p>
+        <div class="slideshow slideshow-wrapper">
+          <div class="home-slideshow">
+            <div class="slide">
+              <div class="blur-up lazyload">
+                <img
+                  class="blur-up lazyload"
+                  data-src="/images/slideshow-banners/home9-banner1.jpg"
+                  src="/images/slideshow-banners/home9-banner1.jpg"
+                  alt="Gift For her"
+                  title="Gift For her" />
+                <div
+                  class="slideshow__text-wrap slideshow__overlay classic bottom">
+                  <div class="slideshow__text-content left">
+                    <div class="container">
+                      <div class="wrap-caption left">
+                        <h2 class="h1 mega-title slideshow__title">
+                          Gift For her
+                        </h2>
+                        <span class="mega-subtitle slideshow__subtitle"
+                          >The latest collection from italian brands</span
+                        >
+                        <span class="btn">Shop now</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="section">
+          <div class="hero hero--large hero__overlay bg-size">
+            <img
+              class="bg-img blur-up"
+              src="/images/parallax-banners/home9-parallax-banner1.jpg"
+              alt="" />
+            <div class="hero__inner">
+              <div class="container">
+                <div class="wrap-text right text-medium font-bold">
+                  <h2 class="h2 mega-title">Kids Collection</h2>
+                  <div class="rte-setting mega-subtitle">
+                    Plenty of options for your kids. Be the first to buy
+                  </div>
+                  <a
+                    href="#"
+                    class="btn"
+                    >Shop Kids</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--End Hero Parallax Section1-->
+
+        <!--Hero Parallax Section2-->
+        <div class="section">
+          <div class="hero hero--large hero__overlay bg-size">
+            <img
+              class="bg-img"
+              src="/images/parallax-banners/home9-parallax-banner2.jpg"
+              alt="" />
+            <div class="hero__inner">
+              <div class="container">
+                <div class="wrap-text left text-large font-bold">
+                  <h2 class="h2 mega-title">
+                    The mid season SALE.<br />UP TO 50% OFF
+                  </h2>
+                  <div class="rte-setting mega-subtitle">
+                    Live life Comfortable.<br />This flip flops switch, flip
+                    &amp; reverse to make up to 246 combos!
+                    <p><b>FREE SHIPPING on all orders over $199</b></p>
+                  </div>
+                  <a
+                    href="#"
+                    class="btn"
+                    >Shop Now</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--End Hero Parallax Section2-->
+
+        <!--Hero Parallax Section3-->
+        <div class="section">
+          <div class="hero hero--large hero__overlay bg-size">
+            <img
+              class="bg-img"
+              src="/images/parallax-banners/home9-parallax-banner3.jpg"
+              alt="" />
+            <div class="hero__inner">
+              <div class="container">
+                <div class="wrap-text center text-medium font-bold">
+                  <h2 class="h2 mega-title">Women Wallets</h2>
+                  <div class="rte-setting mega-subtitle">
+                    Carry this stylist wallets for party
+                  </div>
+                  <a
+                    href="#"
+                    class="btn"
+                    >Explore more</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--End Hero Parallax Section3-->
       </div>
       <footer id="footer">
+        <div class="newsletter-section">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 w-100 d-flex justify-content-start align-items-center">
+                <div class="display-table">
+                  <div class="display-table-cell footer-newsletter">
+                    <div class="section-header text-center">
+                      <label class="h2"
+                        ><span>sign up for </span>newsletter</label
+                      >
+                    </div>
+                    <form
+                      action="#"
+                      method="post">
+                      <div class="input-group">
+                        <input
+                          type="email"
+                          class="input-group__field newsletter__input"
+                          name="EMAIL"
+                          value=""
+                          placeholder="Email address"
+                          required />
+                        <span class="input-group__btn">
+                          <button
+                            type="submit"
+                            class="btn newsletter__submit"
+                            name="commit"
+                            id="Subscribe">
+                            <span
+                              onclick="location.href='/contact'"
+                              class="newsletter__submit-text--large"
+                              >Subscribe</span
+                            >
+                          </button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-5 d-flex justify-content-end align-items-center">
+                <div class="footer-social">
+                  <ul
+                    class="list--inline site-footer__social-icons social-icons">
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-pinterest"></i>
+                        <span class="icon__fallback-text">Pinterest</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-instagram"></i>
+                        <span class="icon__fallback-text">Instagram</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-tumblr-alt"></i>
+                        <span class="icon__fallback-text">Tumblr</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-vimeo-alt"></i>
+                        <span class="icon__fallback-text">Video</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="site-footer">
           <div class="container">
             <div class="footer-top">
