--- a/views/wish.ejs
+++ b/views/wish.ejs
@@ -3,7 +3,13 @@
   class="no-js"
   lang="en">
   <head>
-    <title>QuickPick - 404</title>
+    <meta
+      http-equiv="Content-Type"
+      content="text/html; charset=utf-8" />
+    <meta
+      http-equiv="x-ua-compatible"
+      content="ie=edge" />
+    <title>QuickPick - Wishlist</title>
     <meta
       name="description"
       content="description" />
@@ -52,6 +58,86 @@
             class="search-trigger close-btn">
             <i class="icon anm anm-times-l"></i>
           </button>
+        </div>
+      </div>
+      <div class="top-header">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+              <div class="currency-picker">
+                <span class="selected-currency">USD</span>
+                <ul id="currencies">
+                  <li
+                    data-currency="INR"
+                    class="">
+                    INR
+                  </li>
+                  <li
+                    data-currency="GBP"
+                    class="">
+                    GBP
+                  </li>
+                  <li
+                    data-currency="CAD"
+                    class="">
+                    CAD
+                  </li>
+                  <li
+                    data-currency="USD"
+                    class="selected">
+                    USD
+                  </li>
+                  <li
+                    data-currency="AUD"
+                    class="">
+                    AUD
+                  </li>
+                  <li
+                    data-currency="EUR"
+                    class="">
+                    EUR
+                  </li>
+                  <li
+                    data-currency="JPY"
+                    class="">
+                    JPY
+                  </li>
+                </ul>
+              </div>
+              <div class="language-dropdown">
+                <span class="language-dd">English</span>
+                <ul id="language">
+                  <li class="">German</li>
+                  <li class="">French</li>
+                </ul>
+              </div>
+              <p class="phone-no">
+                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
+              </p>
+            </div>
+            <div
+              class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
+              <div class="text-center">
+                <p class="top-header_middle-text">Worldwide Express Shipping</p>
+              </div>
+            </div>
+            <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
+              <ul class="customer-links list-inline">
+                <li>
+                  <a href="#"><div class="name"><%= username %></div></a>
+                </li>
+                <li>
+                  <a href="#"><div class="about"><%= name %></div></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="header-wrap animated d-flex">
@@ -1722,35 +1808,266 @@
         </ul>
       </div>
       <div id="page-content">
+        <div class="page section-header text-center">
+          <div class="page-title">
+            <div class="wrapper"><h1 class="page-width">Wish List</h1></div>
+          </div>
+        </div>
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="empty-page-content text-center">
-                <h1 style="font-size: 2rem; font-weight: 700">
-                  404 Page Not Found
-                </h1>
-                <p style="font-size: 15px; font-weight: 600">
-                  The page you requested does not exist or may be
-                  underdevelopment
-                </p>
-                <h1 style="font-size: 8px"><%= message %></h1>
-                <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
-                <p>
-                  <a
-                    href="index"
-                    class="btn btn--has-icon-after"
-                    >Continue shopping
-                    <i
-                      class="fa fa-caret-right"
-                      aria-hidden="true"></i
-                  ></a>
-                </p>
-              </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 main-col">
+              <form action="#">
+                <div class="wishlist-table table-content table-responsive">
+                  <table class="table table-bordered">
+                    <thead>
+                      <tr>
+                        <th class="product-name text-center alt-font">
+                          Remove
+                        </th>
+                        <th class="product-price text-center alt-font">
+                          Images
+                        </th>
+                        <th class="product-name alt-font">Product</th>
+                        <th class="product-price text-center alt-font">
+                          Unit Price
+                        </th>
+                        <th class="stock-status text-center alt-font">
+                          Stock Status
+                        </th>
+                        <th class="product-subtotal text-center alt-font">
+                          Add to Cart
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td
+                          class="product-remove text-center"
+                          valign="middle">
+                          <a href="#"
+                            ><i class="icon icon anm anm-times-l"></i
+                          ></a>
+                        </td>
+                        <td class="product-thumbnail text-center">
+                          <a href="#"
+                            ><img
+                              src="/images/product-images/product-image8.jpg"
+                              alt=""
+                              title=""
+                          /></a>
+                        </td>
+                        <td class="product-name">
+                          <h4 class="no-margin">
+                            <a href="#">Minerva Dress black</a>
+                          </h4>
+                        </td>
+                        <td class="product-price text-center">
+                          <span class="amount">$165.00</span>
+                        </td>
+                        <td class="stock text-center">
+                          <span class="in-stock">in stock</span>
+                        </td>
+                        <td class="product-subtotal text-center">
+                          <button
+                            type="button"
+                            class="btn btn-small">
+                            Add To Cart
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td
+                          class="product-remove text-center"
+                          valign="middle">
+                          <a href="#"
+                            ><i class="icon icon anm anm-times-l"></i
+                          ></a>
+                        </td>
+                        <td class="product-thumbnail text-center">
+                          <a href="#"
+                            ><img
+                              src="/images/product-images/product-image4.jpg"
+                              alt=""
+                              title=""
+                          /></a>
+                        </td>
+                        <td class="product-name">
+                          <h4 class="no-margin">
+                            <a href="#">Sueded Cotton Pant in Khaki</a>
+                          </h4>
+                        </td>
+                        <td class="product-price text-center">
+                          <span class="amount">$150.00</span>
+                        </td>
+                        <td class="stock text-center">
+                          <span class="out-stock">Out Of stock</span>
+                        </td>
+                        <td class="product-subtotal text-center">
+                          <button
+                            type="button"
+                            class="btn btn-small">
+                            Add To Cart
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td
+                          class="product-remove text-center"
+                          valign="middle">
+                          <a href="#"
+                            ><i class="icon icon anm anm-times-l"></i
+                          ></a>
+                        </td>
+                        <td class="product-thumbnail text-center">
+                          <a href="#"
+                            ><img
+                              src="/images/product-images/product-image5.jpg"
+                              alt=""
+                              title=""
+                          /></a>
+                        </td>
+                        <td class="product-name">
+                          <h4 class="no-margin">
+                            <a href="#">Woven Solid Midi Shirt Dress</a>
+                          </h4>
+                        </td>
+                        <td class="product-price text-center">
+                          <span class="amount">$150.00</span>
+                        </td>
+                        <td class="stock text-center">
+                          <span class="in-stock">in stock</span>
+                        </td>
+                        <td class="product-subtotal text-center">
+                          <button
+                            type="button"
+                            class="btn btn-small">
+                            Add To Cart
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
       <footer id="footer">
+        <div class="newsletter-section">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 w-100 d-flex justify-content-start align-items-center">
+                <div class="display-table">
+                  <div class="display-table-cell footer-newsletter">
+                    <div class="section-header text-center">
+                      <label class="h2"
+                        ><span>sign up for </span>newsletter</label
+                      >
+                    </div>
+                    <form
+                      action="#"
+                      method="post">
+                      <div class="input-group">
+                        <input
+                          type="email"
+                          class="input-group__field newsletter__input"
+                          name="EMAIL"
+                          value=""
+                          placeholder="Email address"
+                          required />
+                        <span class="input-group__btn">
+                          <button
+                            type="submit"
+                            class="btn newsletter__submit"
+                            name="commit"
+                            id="Subscribe">
+                            <span
+                              onclick="location.href='/contact'"
+                              class="newsletter__submit-text--large"
+                              >Subscribe</span
+                            >
+                          </button>
+                        </span>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-5 d-flex justify-content-end align-items-center">
+                <div class="footer-social">
+                  <ul
+                    class="list--inline site-footer__social-icons social-icons">
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-facebook"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-twitter"></i>
+                        <span class="icon__fallback-text">Twitter</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-pinterest"></i>
+                        <span class="icon__fallback-text">Pinterest</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-instagram"></i>
+                        <span class="icon__fallback-text">Instagram</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-tumblr-alt"></i>
+                        <span class="icon__fallback-text">Tumblr</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-youtube"></i>
+                        <span class="icon__fallback-text">YouTube</span></a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="social-icons__link"
+                        href="#"
+                        target="_blank"
+                        ><i class="icon icon-vimeo-alt"></i>
+                        <span class="icon__fallback-text">Video</span></a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="site-footer">
           <div class="container">
             <div class="footer-top">
