--- a/views/offers.ejs
+++ b/views/offers.ejs
@@ -922,7 +922,7 @@
             </div>
             <div
               class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
-              <div class="logo">
+              <div class="">
                 <a href="index">
                   <img
                     src="/images/logoo.png"
