Bug Fixed, Testing Done, DOCS Introduction Done

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1737,7 +1737,7 @@
                 <!-- <h2 style="font-size: 15px"><%= error %></h2> -->
                 <p>
                   <a
-                    href="index"
+                    href="/"
                     class="btn btn--has-icon-after"
                     >Continue shopping
                     <i
