--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -150,6 +150,22 @@
           </div>
         </div>
       </div>
+      <% if (messages.success && messages.success.length > 0) { %>
+      <div class="alert alert-success"><%= messages.success %></div>
+      <% } %> <% if (messages.error && messages.error.length > 0) { %>
+      <div class="alert alert-danger"><%= messages.error %></div>
+      <% } %>
+
+      <!-- Your admin home page content -->
+      <!-- <h1>Welcome, <%= fullname %></h1> -->
+      <!-- <p>Username: <%= username %></p> -->
+      <!-- <% if (messages.error && messages.error.length > 0) { %>
+      <div class="text-center text-xl mb-4 error flash-message error">
+        <% messages.error.forEach(function(msg) { %>
+        <p class="error"><%= msg %></p>
+        <% }); %>
+      </div>
+      <% } %> -->
       <div id="page-content">
         <div class="product-rows section">
           <div class="container">
