--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -184,7 +184,7 @@
                         type="submit"
                         class="btn mb-3"
                         value="Login" />
-                      <p class="mb-4">
+                      <p class="mb-4 d-flex flex-column">
                         <!-- <a
                           href="/reg"
                           id="RecoverPassword"
@@ -192,11 +192,11 @@
                         > -->
 
                         <a
+                          style="margin-bottom: 5px"
                           href="/adminRegister"
                           id="customer_register_link"
                           >Don't Have Admin's Account? Create</a
                         >
-                        <br />
                         <a
                           href="/userLogin"
                           id="customer_register_link"
