--- a/views/adminRegister.ejs
+++ b/views/adminRegister.ejs
@@ -213,10 +213,11 @@
                         type="submit"
                         class="btn mb-3"
                         value="Sign Up" />
-                      <a href="/adminLogin"
+                      <a
+                        style="margin-bottom: 5px"
+                        href="/adminLogin"
                         >Already have Admin's Account? Login</a
                       >
-                      <br />
                       <a href="/userRegister">Register as a User</a>
                     </div>
                   </div>
