--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -1878,6 +1878,7 @@
                         > -->
 
                         <a
+                          style="margin-bottom: 5px"
                           href="/userRegister"
                           id="customer_register_link"
                           >Don't Have Account? Sign Up</a
