--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -185,7 +185,20 @@
                     type="password"
                     name="confirmPassword" />
 
-                  <button type="submit">Update Profile</button>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <button
+                      style="
+                        margin-top: 10px;
+                        width: 30%;
+                        height: 5vh;
+                        text-align: center;
+                        cursor: pointer;
+                      "
+                      class="hover"
+                      type="submit">
+                      Update Profile
+                    </button>
+                  </div>
                 </form>
               </div>
             </div>
