--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -227,7 +227,11 @@
                         type="submit"
                         class="btn mb-3"
                         value="Sign Up" />
-                      <a href="/userLogin">Already have Account? Login</a>
+                      <a
+                        style="margin-bottom: 5px"
+                        href="/userLogin"
+                        >Already have Account? Login</a
+                      >
                       <a href="/adminRegister">Register as a Admin</a>
                     </div>
                   </div>
