--- a/views/adminProfile.ejs
+++ b/views/adminProfile.ejs
@@ -207,7 +207,20 @@
                     name="confirmPassword"
                     id="confirmPassword" />
 
-                  <button type="submit">Update Profile</button>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <button
+                      style="
+                        margin-top: 10px;
+                        width: 30%;
+                        height: 5vh;
+                        text-align: center;
+                        cursor: pointer;
+                      "
+                      class="hover"
+                      type="submit">
+                      Update Profile
+                    </button>
+                  </div>
                 </form>
               </div>
             </div>
